--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "proyecto 2 nodeJs mongo react",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Juan Esteban Chaparro Alejandro Cordoba",
   "license": "ISC",
